release/develop/20160226-2040/backup/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Process Version 1</fullName>
        <description>First Process for Universal Containers</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Amount_Change_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Change Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_change_from_initial__c</fullName>
        <formula>IF( NOT( ISBLANK( Closed_Opp_Date_Time__c ) ) ,  Amount -  Initial_Opportunity_Amount__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount change from initial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Opp_Date_Time__c</fullName>
        <description>Date/time when the Opportunity was Closed/Won or Lost.</description>
        <label>Closed Opp Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Opportunity_Amount__c</fullName>
        <label>Initial Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owners_Manager_Email__c</fullName>
        <label>Owners Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <description>Count of total products</description>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stalled_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stalled Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>TEXT( Owner.User_Region__c )</formula>
        <label>User_Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Default_Opportunity_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Process Version 1</businessProcess>
        <label>Default Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Opp_Detail_Page</fullName>
        <active>true</active>
        <businessProcess>Process Version 1</businessProcess>
        <label>Locked Opp Detail Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partial_Locked_Opp_Detail_Page</fullName>
        <active>true</active>
        <businessProcess>Process Version 1</businessProcess>
        <label>Partial Locked Opp Detail Page</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ValidateClosedOppReqFieldsNotEditable</fullName>
        <active>false</active>
        <description>Checks to make sure that if required fields on the Opportunity page are not Editable by anyone but the Sys Admin.</description>
        <errorConditionFormula>( ISCHANGED( OwnerId ) ||
ISCHANGED( Name ) ||
ISCHANGED( AccountId ) ||
ISCHANGED( CloseDate ) ||
AND( NOT(ISBLANK( Closed_Opp_Date_Time__c )), ISCHANGED( StageName ) ) )
&amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Opportunity Name, Account Name, Close Date, and Stage changes cannot be saved on a Closed Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Description_Save_Authorized</fullName>
        <active>true</active>
        <description>Checks to make sure that if the Description field is changed on a Partial Read-only page, that it&apos;s the owner.</description>
        <errorConditionFormula>ISCHANGED(Description) &amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot;) &amp;&amp; ( $User.Id &lt;&gt; Owner.Id )</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Only the Owner can change the Description field on a Closed Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Product_Count_on_Closed_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Product_Count__c ) ,NOT(ISBLANK( Closed_Opp_Date_Time__c )), NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
        <errorMessage>Cannot modify Products after an Opportunity is Closed.</errorMessage>
    </validationRules>
</CustomObject>